--- a/src/main/resources/jv/interfazligafutbol/addEquipo.fxml
+++ b/src/main/resources/jv/interfazligafutbol/addEquipo.fxml
@@ -46,12 +46,17 @@
   <fx:include fx:id="nav" source="nav.fxml" />
    <AnchorPane prefHeight="375.0" prefWidth="852.0" style="-fx-background-color: #5174cc;">
       <children>
+         <ImageView fitHeight="378.0" fitWidth="692.0" opacity="0.43" pickOnBounds="true" preserveRatio="true">
+            <image>
+               <Image url="@images/equipo.jpg" />
+            </image>
+         </ImageView>
          <ImageView fitHeight="378.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true">
             <image>
                <Image url="@images/escudo_add_equipo.jpg" />
             </image>
          </ImageView>
-         <Pane layoutX="188.0" layoutY="-2.0" opacity="0.68" prefHeight="378.0" prefWidth="450.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
+         <Pane layoutX="188.0" layoutY="-2.0" opacity="0.77" prefHeight="378.0" prefWidth="504.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
             <children>
                <Label layoutX="198.0" layoutY="36.0" text="Equipo">
                   <font>
