--- a/src/main/resources/jv/interfazligafutbol/buscarEquipo.fxml
+++ b/src/main/resources/jv/interfazligafutbol/buscarEquipo.fxml
@@ -32,32 +32,47 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.TextFlow?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jv.interfazligafutbol.MostrarEquipoContoller">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jv.interfazligafutbol.BuscarEquipoController">
   <fx:include fx:id="nav" source="nav.fxml" />
    <AnchorPane prefHeight="410.0" prefWidth="640.0" style="-fx-background-color: #2B4C7E;">
       <children>
          <ImageView fitHeight="374.0" fitWidth="640.0" layoutX="2.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@images/fondo_mostrar_equipo.jpg" />
+               <Image url="@images/equipo.jpg" />
             </image>
          </ImageView>
-         <Pane layoutX="44.0" layoutY="14.0" opacity="0.5" prefHeight="346.0" prefWidth="552.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
+         <Pane layoutX="14.0" layoutY="14.0" opacity="0.73" prefHeight="346.0" prefWidth="263.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
             <children>
-               <Label layoutX="241.0" layoutY="14.0" prefHeight="27.0" prefWidth="70.0" text="Equipos">
+               <Label layoutX="71.0" layoutY="84.0" prefHeight="27.0" prefWidth="124.0" text="Buscar equipo">
                   <font>
                      <Font name="System Bold" size="18.0" />
                   </font>
                </Label>
-               <TextFlow fx:id="mostrarEquipo" layoutX="42.0" layoutY="49.0" prefHeight="283.0" prefWidth="483.0" textAlignment="CENTER" />
+               <TextField fx:id="buscarEquipo" layoutX="29.0" layoutY="146.0" prefHeight="27.0" prefWidth="205.0" promptText="Introduce el nombre del equipo" />
+               <Button layoutX="86.0" layoutY="218.0" mnemonicParsing="false" onAction="#buscar" prefHeight="27.0" prefWidth="93.0" text="Buscar Equipo" />
+            </children>
+         </Pane>
+         <Pane layoutX="294.0" layoutY="15.0" opacity="0.73" prefHeight="346.0" prefWidth="331.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
+            <children>
+               <Label layoutX="91.0" layoutY="46.0" prefHeight="27.0" prefWidth="150.0" text="Datos del equipo">
+                  <font>
+                     <Font name="System Bold" size="18.0" />
+                  </font>
+               </Label>
+               <Label fx:id="mostrarEquipo" alignment="CENTER" layoutX="50.0" layoutY="90.0" prefHeight="224.0" prefWidth="254.0">
+                  <font>
+                     <Font size="18.0" />
+                  </font></Label>
             </children>
          </Pane>
       </children>
