--- a/src/main/resources/jv/interfazligafutbol/modificarEquipo.fxml
+++ b/src/main/resources/jv/interfazligafutbol/modificarEquipo.fxml
@@ -32,50 +32,39 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jv.interfazligafutbol.ModificarEquipo">
   <fx:include fx:id="nav" source="nav.fxml" />
-   <AnchorPane prefHeight="410.0" prefWidth="640.0" style="-fx-background-color: #5174cc;">
+   <AnchorPane prefHeight="375.0" prefWidth="852.0" style="-fx-background-color: #5174cc;">
       <children>
-         <ImageView fitHeight="247.0" fitWidth="273.0" layoutX="284.0" layoutY="76.0" pickOnBounds="true" preserveRatio="true">
+         <ImageView fitHeight="378.0" fitWidth="692.0" opacity="0.43" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@images/futbol-retro.gif" />
+               <Image url="@images/fondo_mostrar_equipo.jpg" />
             </image>
          </ImageView>
-         <ImageView fitHeight="381.0" fitWidth="640.0" opacity="0.41" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@images/index.jpg" />
-            </image>
-         </ImageView>
-         <ImageView fitHeight="44.0" fitWidth="117.0" layoutX="51.0" layoutY="328.0" opacity="0.71" pickOnBounds="true" preserveRatio="true">
-            <image>
-               <Image url="@images/logo-ia.png" />
-            </image>
-         </ImageView>
-         <Label layoutX="22.0" layoutY="119.0" prefHeight="70.0" prefWidth="327.0" text="BIENVENIDO A MI GESTOR DE LIGA" textAlignment="CENTER" textFill="WHITE">
-            <font>
-               <Font name="Bodoni MT" size="18.0" />
-            </font>
-            <cursor>
-               <Cursor fx:constant="NONE" />
-            </cursor></Label>
-         <Label layoutX="491.0" layoutY="338.0" text="Arturo Carrillo Jimenez" textFill="WHITE">
-            <font>
-               <Font name="System Bold Italic" size="12.0" />
-            </font></Label>
-         <Label layoutX="103.0" layoutY="180.0" />
-         <Label layoutX="22.0" layoutY="312.0" text="Imagenes generadas por:" textFill="WHITE">
-            <font>
-               <Font name="System Italic" size="10.0" />
-            </font>
-         </Label>
-      </children>
-   </AnchorPane>
+         <Pane layoutX="140.0" layoutY="60.0" opacity="0.73" prefHeight="258.0" prefWidth="362.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
+            <children>
+               <Label layoutX="101.0" layoutY="59.0" text="Equipo a modificar">
+                  <font>
+                     <Font name="System Bold" size="18.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="equipoModificar" layoutX="67.0" layoutY="111.0" prefHeight="25.0" prefWidth="229.0" />
+               <Button layoutX="116.0" layoutY="170.0" mnemonicParsing="false" onAction="#modificar" prefHeight="25.0" prefWidth="130.0" text="Buscar equipo" />
+               <Label fx:id="mensaje_error" alignment="CENTER" layoutX="41.0" layoutY="211.0" prefHeight="17.0" prefWidth="279.0" textAlignment="CENTER">
+                  <font>
+                     <Font size="14.0" />
+                  </font></Label>
+            </children>
+         </Pane>
+      </children></AnchorPane>
 </VBox>
