--- a/src/main/resources/jv/interfazligafutbol/mostrarEquipo.fxml
+++ b/src/main/resources/jv/interfazligafutbol/mostrarEquipo.fxml
@@ -47,7 +47,7 @@
       <children>
          <ImageView fitHeight="374.0" fitWidth="640.0" layoutX="2.0" opacity="0.27" pickOnBounds="true" preserveRatio="true">
             <image>
-               <Image url="@images/fondo_mostrar_equipo.jpg" />
+               <Image url="@images/copa.jpg" />
             </image>
          </ImageView>
          <Pane layoutX="44.0" layoutY="14.0" opacity="0.5" prefHeight="346.0" prefWidth="552.0" style="-fx-background-color: #ffffff; -fx-background-radius: 50;">
