--- a/src/main/resources/jv/interfazligafutbol/nav.fxml
+++ b/src/main/resources/jv/interfazligafutbol/nav.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 
-<MenuBar style="-fx-background-color: #9278D3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jv.interfazligafutbol.NavController">
+<MenuBar style="-fx-background-color: #4668B3;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jv.interfazligafutbol.NavController">
    <menus>
       <Menu mnemonicParsing="false" text="Inicio">
          <items>
